--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/companyDB
+spring.datasource.url=jdbc:mysql://localhost:3306/companydb
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=barth37562012
+spring.jpa.hibernate.ddl-auto=update
