--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/companydb
 spring.datasource.username=root
 spring.datasource.password=barth37562012
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
